update of kfax translation. This time mine. Sorry for not using cvs silent version of committing but others seem to do the same after beta freeze.

--- a/po/pl/kfax.po
+++ b/po/pl/kfax.po
@@ -1,4 +1,3 @@
-# KTranslator Generated File
 msgid ""
 msgstr ""
 "Project-Id-Version: kfax\n"
@@ -33,6 +32,12 @@ msgid ""
 "Bernd Johannes Wuebben\n"
 "wuebben@kde.org"
 msgstr ""
+"\n"
+"KFax %s\n"
+"\n"
+"Copyright 1997-98\n"
+"Bernd Johannes Wuebben\n"
+"wuebben@kde.org"
 
 #: kfax.cpp:402
 msgid "Help page"
@@ -140,19 +145,19 @@ msgstr "Id¼ do strony..."
 
 #: kfax.cpp:554
 msgid "w: 00000 h: 00000"
-msgstr ""
+msgstr "sz: 00000 w: 00000"
 
 #: kfax.cpp:555
 msgid "Res: XXXXX"
-msgstr ""
+msgstr "Rozdz: XXXXX"
 
 #: kfax.cpp:556
 msgid "Type: XXXXXXX"
-msgstr ""
+msgstr "Typ: XXXXXXX"
 
 #: kfax.cpp:557
 msgid "P:XXXofXXX"
-msgstr ""
+msgstr "D:XXXzXXX"
 
 #: kfax.cpp:582
 msgid "Open Location:"
@@ -258,18 +263,18 @@ msgstr "Najpierw musisz otworzyæ stronê faxu."
 
 #: kfax.cpp:2400
 #, c-format
-msgid "P.%d of %d"
-msgstr ""
+msgid "D.%d of %d"
+msgstr "D.%d z %d"
 
 #: kfax.cpp:2411
 #, c-format
 msgid "W: %d H: %d"
-msgstr ""
+msgstr "Sz: %d W: %d"
 
 #: kfax.cpp:2416
 #, c-format
 msgid "Res: %s"
-msgstr ""
+msgstr "Rozdz: %s"
 
 #: kfax.cpp:2416 options.cpp:71
 msgid "Fine"
@@ -281,11 +286,11 @@ msgstr "Normalna"
 
 #: kfax.cpp:2424
 msgid "Type: Tiff "
-msgstr ""
+msgstr "Type: Tiff"
 
 #: kfax.cpp:2427
 msgid "Type: Raw "
-msgstr ""
+msgstr "Typ: Dane bez nag³ówka"
 
 #: kfax.cpp:2738
 msgid ""
