--- a/po/fi/kfax.po
+++ b/po/fi/kfax.po
@@ -35,6 +35,12 @@ msgid ""
 "Bernd Johannes Wuebben\n"
 "wuebben@kde.org"
 msgstr ""
+"\n"
+"KFax %s\n"
+"\n"
+"Copyright 1997-98\n"
+"Bernd Johannes Wuebben\n"
+"wuebben@kde.org"
 
 #: kfax.cpp:402
 msgid "Help page"
@@ -142,19 +148,19 @@ msgstr "Siirry sivulle ..."
 
 #: kfax.cpp:554
 msgid "w: 00000 h: 00000"
-msgstr ""
+msgstr "l: 00000 k: 00000"
 
 #: kfax.cpp:555
 msgid "Res: XXXXX"
-msgstr ""
+msgstr "Res: XXXXX"
 
 #: kfax.cpp:556
 msgid "Type: XXXXXXX"
-msgstr ""
+msgstr "Tyyppi: XXXXXXX"
 
 #: kfax.cpp:557
 msgid "P:XXXofXXX"
-msgstr ""
+msgstr "P:XXX/XXX"
 
 #: kfax.cpp:582
 msgid "Open Location:"
@@ -260,17 +266,17 @@ msgstr "Sinun tulee avata faksisivu ensin."
 #: kfax.cpp:2400
 #, c-format
 msgid "P.%d of %d"
-msgstr ""
+msgstr "P.%d / %d"
 
 #: kfax.cpp:2411
 #, c-format
 msgid "W: %d H: %d"
-msgstr ""
+msgstr "L: %d K: %d"
 
 #: kfax.cpp:2416
 #, c-format
 msgid "Res: %s"
-msgstr ""
+msgstr "Res: %s"
 
 #: kfax.cpp:2416 options.cpp:71
 msgid "Fine"
@@ -282,11 +288,11 @@ msgstr "Tavallinen"
 
 #: kfax.cpp:2424
 msgid "Type: Tiff "
-msgstr ""
+msgstr "Tyyppi: Tiff"
 
 #: kfax.cpp:2427
 msgid "Type: Raw "
-msgstr ""
+msgstr "Tyyppi: Raw"
 
 #: kfax.cpp:2738
 msgid ""
