--- a/po/de/kfax.po
+++ b/po/de/kfax.po
@@ -1,18 +1,14 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: kfax\n"
 "POT-Creation-Date: 1999-01-25 01:42+0100\n"
-"PO-Revision-Date: 1998-11-15 12:00+0100\n"
+"PO-Revision-Date: 1999-01-30 17:30+MET\n"
+"Translator: Tobias Burnus <burnus@berlin1.netsurf.de>\n"
 "Last-Translator:Thomas Diehl <th_diehl@csi.com>\n"
 "Language-Team: German <kde-i18n@kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
-"Content-Transfer-Encoding: iso-8859-1\n"
-"Translator: Tobias Burnus <burnus@berlin1.netsurf.de>\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: kfax.cpp:233 kfax.cpp:827
 msgid "Show &Tool Bar"
@@ -40,6 +36,12 @@ msgid ""
 "Bernd Johannes Wuebben\n"
 "wuebben@kde.org"
 msgstr ""
+"\n"
+"KFax %s\n"
+"\n"
+"Copyright 1997-98\n"
+"Bernd Johannes Wuebben\n"
+"wuebben@kde.org"
 
 #: kfax.cpp:402
 msgid "Help page"
@@ -91,7 +93,7 @@ msgstr "Seite &spiegeln"
 
 #: kfax.cpp:424
 msgid "&Flip Page"
-msgstr "Seite &umdrehen"
+msgstr "Seite &umklappen"
 
 #: kfax.cpp:426
 msgid "Zoom &in"
@@ -107,7 +109,7 @@ msgstr "&Fax-Optionen..."
 
 #: kfax.cpp:434
 msgid "&Tool Bar"
-msgstr "&Werkzeungleiste"
+msgstr "&Werkzeugleiste"
 
 #: kfax.cpp:435
 msgid "&Status Bar"
@@ -147,19 +149,19 @@ msgstr "Gehe zu Seite..."
 
 #: kfax.cpp:554
 msgid "w: 00000 h: 00000"
-msgstr ""
+msgstr "B: 00000 H: 00000"
 
 #: kfax.cpp:555
 msgid "Res: XXXXX"
-msgstr ""
+msgstr "Auflsg: XXXXX"
 
 #: kfax.cpp:556
 msgid "Type: XXXXXXX"
-msgstr ""
+msgstr "Typ: XXXXXXX"
 
 #: kfax.cpp:557
 msgid "P:XXXofXXX"
-msgstr ""
+msgstr "S:XXXvXXX"
 
 #: kfax.cpp:582
 msgid "Open Location:"
@@ -193,7 +195,7 @@ msgstr ""
 #: kfax.cpp:1011
 #, c-format
 msgid "Can't print to \"%s\"\n"
-msgstr "Das Drucken in ,,%s\" ist nicht möglich\n"
+msgstr "Das Drucken auf \"%s\" ist nicht möglich\n"
 
 #: kfax.cpp:1022
 #, c-format
@@ -237,7 +239,7 @@ msgstr "Kommunikation mit KFM war nicht möglich"
 #: kfax.cpp:1191
 #, c-format
 msgid "Loading '%s'"
-msgstr "Lädt ,%s'"
+msgstr "Lädt \"%s\""
 
 #: kfax.cpp:1194
 msgid "Done"
@@ -266,17 +268,17 @@ msgstr "Sie müssen zuerst eine Faxseite öffnen."
 #: kfax.cpp:2400
 #, c-format
 msgid "P.%d of %d"
-msgstr ""
+msgstr "S.%d von %d"
 
 #: kfax.cpp:2411
 #, c-format
 msgid "W: %d H: %d"
-msgstr ""
+msgstr "B: %d H: %d"
 
 #: kfax.cpp:2416
 #, c-format
 msgid "Res: %s"
-msgstr ""
+msgstr "Auflsg: %s"
 
 #: kfax.cpp:2416 options.cpp:71
 msgid "Fine"
@@ -288,11 +290,11 @@ msgstr "Normal"
 
 #: kfax.cpp:2424
 msgid "Type: Tiff "
-msgstr ""
+msgstr "Typ: TIFF"
 
 #: kfax.cpp:2427
 msgid "Type: Raw "
-msgstr ""
+msgstr "Typ: Rohdaten"
 
 #: kfax.cpp:2738
 msgid ""
@@ -300,7 +302,7 @@ msgid ""
 "Do you want to overwrite it?\n"
 "\n"
 msgstr ""
-"Eine Datei mit dem Namen existiert bereits\n"
+"Eine Datei mit diesem Namen existiert bereits.\n"
 "Wollen Sie diese überschreiben?\n"
 "\n"
 
@@ -368,7 +370,7 @@ msgid ""
 " if you wish to print to a printer."
 msgstr ""
 "Sie müssem einen Druckbefehl wie \"lpr\" eingeben,\n"
-"um zu einem Drucker zu drucken."
+"um auf einen Drucker zu drucken."
 
 #: options.cpp:54
 msgid "KFax Options Dialog"
