--- a/po/sk/kpaint.po
+++ b/po/sk/kpaint.po
@@ -230,6 +230,14 @@ msgid ""
 "see the online documentation\n"
 "for details."
 msgstr ""
+"KPaint verzia %s\n"
+"\n"
+"(c) %s\n"
+"\n"
+"KPaint is released under the\n"
+"GNU Public License agreement,\n"
+"see the online documentation\n"
+"for details."
 
 #: kpaint.cpp:508
 msgid "&Image"
