--- a/po/pt_BR/kview.po
+++ b/po/pt_BR/kview.po
@@ -46,6 +46,9 @@ msgid ""
 "\n"
 "Sirtaj S. Kang (taj@kde.org)\n"
 msgstr ""
+"KView -- Visualizador Gráfico. %s\n"
+"\n"
+"Sirtaj S. Kang (taj@kde.org)\n"
 
 #: viewer.cpp:285
 msgid "About KView"
@@ -109,7 +112,7 @@ msgstr "&Reiniciar"
 
 #: viewer.cpp:369
 msgid "&Preferences..."
-msgstr ""
+msgstr "Preferências..."
 
 #: viewer.cpp:375
 msgid "&Zoom..."
@@ -158,27 +161,24 @@ msgid "Flip &horizontal"
 msgstr "Virar &Horizontalmente"
 
 #: viewer.cpp:404
-#, fuzzy
 msgid "Desktop &Tile"
-msgstr "Para a Área de Trabalho"
+msgstr "M&osaico do Ambiente"
 
 #: viewer.cpp:405
-#, fuzzy
 msgid "Desktop &Max"
-msgstr "Para a Área de Trabalho"
+msgstr "&Máximo do Ambiente"
 
 #: viewer.cpp:407
-#, fuzzy
 msgid "Desktop Max&pect"
-msgstr "Má&ximo"
+msgstr "Max&pect do Ambiente"
 
 #: viewer.cpp:426
 msgid "&How do I..."
-msgstr ""
+msgstr "&Como eu faço..."
 
 #: viewer.cpp:427
 msgid "&What is a..."
-msgstr ""
+msgstr "&O que é um(a)..."
 
 #: viewer.cpp:429
 msgid "&About KView..."
@@ -291,33 +291,31 @@ msgstr "Iniciar &slide"
 
 #: prefdlg.cpp:32
 msgid "kView Preferences"
-msgstr ""
+msgstr "Preferências"
 
 #: prefdlg.cpp:36
 msgid "&Apply"
-msgstr ""
+msgstr "&Aplicar"
 
 #: prefdlg.cpp:51
 msgid "On Load"
-msgstr ""
+msgstr "No carregamento"
 
 #: prefdlg.cpp:58
-#, fuzzy
 msgid "Resize Window"
-msgstr "Tamanho da &Janela"
+msgstr "Redimensionar Janela"
 
 #: prefdlg.cpp:61
 msgid "Resize Image"
-msgstr ""
+msgstr "Redimensionar Imagem"
 
 #: prefdlg.cpp:64
 msgid "No Resize"
-msgstr ""
+msgstr "Sem redimensionar"
 
 #: prefdlg.cpp:69
-#, fuzzy
 msgid "Slideshow"
-msgstr "&Show de slides Liga/Desliga"
+msgstr "Show de slides"
 
 #: prefdlg.cpp:72
 msgid "Loop"
@@ -325,11 +323,11 @@ msgstr "Ciclo"
 
 #: prefdlg.cpp:76
 msgid "Slide interval (sec)"
-msgstr ""
+msgstr "Intervalo dos slides (seg)"
 
 #: prefdlg.cpp:84
 msgid "&Keys"
-msgstr ""
+msgstr "&Teclas"
 
 #~ msgid "&Tile"
 #~ msgstr "&Mosaico"
